--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "ecommerce-admin",
+  "name": "ecommerce-admin-crm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -27,13 +31,17 @@
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-query-devtools": "^5.28.6",
     "@tanstack/react-table": "^8.10.7",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.279.0",
     "next": "^14.1.4",
     "next-themes": "^0.2.1",
+    "postgres": "^3.4.3",
     "react": "latest",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
@@ -41,6 +49,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.46.2",
     "react-icons": "^5.0.1",
+    "recharts": "^2.8.0",
     "sharp": "^0.32.6",
     "sonner": "^2.0.5",
     "tailwind-merge": "^1.14.0",
@@ -48,17 +57,18 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1",
-    "@tanstack/eslint-plugin-query": "^5.28.6",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
-    "encoding": "^0.1.13",
+    "drizzle-kit": "^0.20.4",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.6.2",
     "typescript": "latest"
   }
 }
